# wattwise

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.lock.txt
.github/workflows/: ci.yml
app/bots/tg/: bot.py  states.py
app/bots/tg/handlers/: admin.py  common.py  invoices.py  readings.py
app/bots/tg/keyboards/: inline.py
app/bots/tg/middlewares/: access.py
app/core/: db.py  models.py
app/core/repositories/: base.py  invoice.py  meter.py  reading.py
app/migrations/models/: 0_20250611161628_init.py  0_20250611181547_init.py  1_20250611161933_add_meter_subtraction.py
app/services/: billing.py  export.py  scheduler.py
app/templates/: invoice.html
app/tests/: test_billing_service.py
src/app/: config.py
src/app/bots/tg/: bot.py  states.py
src/app/bots/tg/handlers/: admin.py  common.py  deductions.py  invoices.py  onboarding.py  readings.py  summary.py  utils.py
src/app/bots/tg/keyboards/: inline.py  reply.py
src/app/core/: calculations.py  dates.py  db.py  models.py
src/app/core/repositories/: adjustment.py  base.py  tariff.py  tenant.py
src/app/migrations/models/: 0_20250612090553_init.py  1_20250611201804_update.py  1_20250612091124_update.py
src/app/services/: billing.py  export.py  scheduler.py
src/app/templates/: invoice.html  summary_report.html
tests/: conftest.py  test_billing_service.py  test_calculations.py  test_repositories.py
